[tool.poetry]
name = "data-structures"
version = "0.1.0"
description = ""
authors = ["Elson Chan <elsonccjgmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.9.7"
stubs = "^1.0.0"
mypy = "^1.15.0"
black = "^25.1.0"
pandas = "^2.2.3"
requests = "^2.32.3"
retry = "^0.9.2"
logger = "^1.4"
tenacity = "^9.0.0"
aiohttp = "^3.11.13"
asyncio = "^3.4.3"
pyspark = "^3.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
strict = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
exclude = '^(\\.venv|venv|env|\\.g it|node_modules)/'